# google-kaggle-competition

./: .gitignore  README.md  dvc.yaml  dvclive_Dishes.json  dvclive_Landmarks.json  params.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
data/: .gitignore  archive.zip.dvc  baseline_split.zip.dvc  kaggle_130k.dvc  kaggle_130k_index.txt
data/teacher/: Dishes.zip.dvc
data/teacher_data/: .gitignore  Benchmark.zip.dvc  Dishes.zip.dvc  Dishes_large.zip.dvc  Landmarks.zip.dvc
data/voxel51/test/: labels.json  manifest.json  manifest_relative.json
data/voxel51/train/: labels.json  manifest_relative.json
data/voxel51/val/: labels.json  manifest.json  (+1 more)
datasets/kaggle_130k/: download_and_unzip.sh
dvc_plots/: index.html
dvclive_Dishes/: report.html
dvclive_Dishes/scalars/: learning_rate.tsv  training_loss.tsv  validation_lss.tsv
dvclive_Landmarks/: report.html
dvclive_Landmarks/scalars/: learning_rate.tsv  training_loss.tsv  validation_lss.tsv
models/: .gitignore
models/baseline_130k_128_split/: .gitignore
notebooks/: baseline.ipynb  datasets.py  networks.py  teacher-model.ipynb  trainer.py  voxel51_prepare_index_file.ipynb
reports/: dvclive.json  dvclive_Benchmark.json  dvclive_Dishes.json  dvclive_MNIST_exp.json  dvclive_baseline_130k_128_split.json
reports/dvclive/: report.html
reports/dvclive_Benchmark/: report.html
reports/dvclive_Dishes/: report.html
reports/dvclive_baseline_130k_128_split/: report.html
src/stages/: datasets.py  networks.py  preprocess.py  preprocess_dataset.py  split_dataset.py  train.py  trainer.py  unzip_dataset.py  visualise_embeddings.py
src/utils/: datasets.py  losses.py  networks.py  trainer.py
(+14 files in other folders)
