[tool.poetry]
name = "google-kaggle"
version = "0.1.0"
description = ""
authors = ["Yury <yury@iterative.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.0"
dvc = {extras = ["s3"], version = "^2.16.0"}
torchvision = "^0.13.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
